can finally add values for translations when sending from server